<resources>
    <string name="app_name">Calculadora</string>
    <string name="ac">ac</string>
    <string name="smbolo_divisao">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="simbolo_subtracao">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="simbolo_adicao">+</string>
    <string name="_0">0</string>
    <string name="ponto">.</string>
    <string name="simbolo_igual">=</string>
</resources>