<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/operacao_tv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="25dp"
      android:layout_marginEnd="16dp"
      android:textAlignment="textEnd"
      android:textSize="50sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="6+8" />

  <TextView
      android:id="@+id/resultado_tv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:textAlignment="textEnd"
      android:textSize="40sp"
      app:layout_constraintBottom_toTopOf="@id/ac_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/operacao_tv"
      tools:text="14" />

    <Button
        android:id="@+id/ac_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/resultado_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sete_btn"
        />

  <Button
      android:id="@+id/divisao_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/smbolo_divisao"
      android:textSize="25sp"
      android:layout_marginEnd="16dp"
      app:layout_constraintTop_toTopOf="@id/ac_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="@id/ac_btn"
      />

  <Button
        android:id="@+id/sete_btn"
        style="@style/button"
        android:text="@string/_7"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/ac_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/quatro_btn"
        app:layout_constraintEnd_toStartOf="@id/oito_btn"
        />

    <Button
        android:id="@+id/oito_btn"
        style="@style/button"
        android:text="@string/_8"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/sete_btn"
        app:layout_constraintStart_toEndOf="@id/sete_btn"
        app:layout_constraintEnd_toStartOf="@id/nove_btn"
        />

    <Button
        android:id="@+id/nove_btn"
        style="@style/button"
        android:text="@string/_9"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/oito_btn"
        app:layout_constraintStart_toEndOf="@id/oito_btn"
        app:layout_constraintEnd_toStartOf="@id/multiplicacao_btn"
        />

    <Button
        android:id="@+id/multiplicacao_btn"
        style="@style/button"
        android:text="@string/x"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/nove_btn"
        app:layout_constraintStart_toEndOf="@id/nove_btn"
        app:layout_constraintEnd_toEndOf="parent"
        />

  <Button
      android:id="@+id/quatro_btn"
      style="@style/button"
      android:text="@string/_4"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintTop_toBottomOf="@id/sete_btn"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@id/um_btn"
      app:layout_constraintEnd_toStartOf="@id/cinco_btn"
      />

  <Button
      android:id="@+id/cinco_btn"
      style="@style/button"
      android:text="@string/_5"
      android:layout_marginStart="5dp"
      app:layout_constraintTop_toTopOf="@id/quatro_btn"
      app:layout_constraintStart_toEndOf="@id/quatro_btn"
      app:layout_constraintEnd_toStartOf="@id/seis_btn"
      />

  <Button
      android:id="@+id/seis_btn"
      style="@style/button"
      android:text="@string/_6"
      android:layout_marginStart="5dp"
      app:layout_constraintTop_toTopOf="@id/cinco_btn"
      app:layout_constraintStart_toEndOf="@id/cinco_btn"
      app:layout_constraintEnd_toStartOf="@id/subtracao_btn"
      />

  <Button
      android:id="@+id/subtracao_btn"
      style="@style/button"
      android:text="@string/simbolo_subtracao"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintTop_toTopOf="@id/seis_btn"
      app:layout_constraintStart_toEndOf="@id/seis_btn"
      app:layout_constraintEnd_toEndOf="parent"
      />

  <Button
      android:id="@+id/um_btn"
      style="@style/button"
      android:text="@string/_1"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintTop_toBottomOf="@id/quatro_btn"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@id/zero_btn"
      app:layout_constraintEnd_toStartOf="@id/dois_btn"
      />

  <Button
      android:id="@+id/dois_btn"
      style="@style/button"
      android:text="@string/_2"
      android:layout_marginStart="5dp"
      app:layout_constraintTop_toTopOf="@id/um_btn"
      app:layout_constraintStart_toEndOf="@id/um_btn"
      app:layout_constraintEnd_toStartOf="@id/tres_btn"
      />

  <Button
      android:id="@+id/tres_btn"
      style="@style/button"
      android:text="@string/_3"
      android:layout_marginStart="5dp"
      app:layout_constraintTop_toTopOf="@id/dois_btn"
      app:layout_constraintStart_toEndOf="@id/dois_btn"
      app:layout_constraintEnd_toStartOf="@id/adicao_btn"
      />

  <Button
      android:id="@+id/adicao_btn"
      style="@style/button"
      android:text="@string/simbolo_adicao"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintTop_toTopOf="@id/tres_btn"
      app:layout_constraintStart_toEndOf="@id/tres_btn"
      app:layout_constraintEnd_toEndOf="parent"
      />

  <Button
      android:id="@+id/zero_btn"
      android:layout_width="275dp"
      android:layout_height="wrap_content"
      android:padding="17dp"
      android:text="@string/_0"
      android:textSize="25sp"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="64dp"
      app:layout_constraintTop_toBottomOf="@id/um_btn"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/igual_btn"
      />
  <Button
      android:id="@+id/igual_btn"
      style="@style/button"
      android:text="@string/simbolo_igual"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintTop_toTopOf="@id/zero_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/zero_btn"
      />



</androidx.constraintlayout.widget.ConstraintLayout>